--- a/web-intensive/lesson1/styleChat.css
+++ b/web-intensive/lesson1/styleChat.css
@@ -4,41 +4,66 @@
     box-sizing: border-box;
 }
 body{
-background-color: green;
+background-color: white;
 }
 .container{
     justify-content:space-between;
     display: flex;
+    background-color: white;
 }
 .column1{
     align-items: flex-start;
-    background-color: orange;
-    width: 13%;
+    width: 15%;
     height: 663px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.25);
 }
 .column2{
-    background-color: orangered;
-    width: 38%;
+    width: 35%;
     height: 663px;
-    display: flex;
 }
 .column3{
-    background-color: red;
-    width: 55%;
+    width: 50%;
     height: 662px;
-}
-.navbar{
-    background-color: yellow;
-    width: 100%;
-    height: 80px;
+    padding: 10px 25px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.25);
 }
 .navbar2{
-    background-color: blue;
     width: 100%;
     height: 80px;
 }
 .chatbox{
-    background-color: greenyellow;
     width: 100%;
     height: 583px;
+}
+.column1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+.column2 .list-group {
+    height: 80%;
+    overflow: auto;
+    color: whitesmoke;
+}
+.title{
+    height: 100px;
+    border-bottom: 1px solid rgba(0,0,0,0.25);
+    margin-bottom:30px;
+}
+.title h2{
+    line-height:100px;
+    align-items:center;
+}
+.chat-content-container {
+    height: 90%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.chat-content {
+    background-color: lightgray;
+    margin-bottom: 10px;
+    max-width: 70%;
+    padding: 5px 10px;
 }
