--- a/web-intensive/lesson1/styleChat.css
+++ b/web-intensive/lesson1/styleChat.css
@@ -42,7 +42,7 @@ background-color: white;
     align-items: center;
 }
 .column2 .list-group {
-    height: 80%;
+    height: 80.5%;
     overflow: auto;
     color: whitesmoke;
 }
@@ -56,14 +56,55 @@ background-color: white;
     align-items:center;
 }
 .chat-content-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 90%;
+    overflow: auto;
+}
+.chat-content {
+    background-color: gray;
+    margin-bottom: 10px;
+    max-width: 70%;
+    padding: 5px 10px;
+    border-radius: 10px;
+    color: white;
+}
+.chat-content span{
+    word-break: break-word;
+}
+.chat-content-container .owner {
+    background-color: #0097e6;
+    float: right;
+    align-self: flex-end !important;
+}
+.chat {
     height: 90%;
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
-.chat-content {
-    background-color: lightgray;
-    margin-bottom: 10px;
-    max-width: 70%;
-    padding: 5px 10px;
+.chat form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.chat form input {
+    width: 90%;
+    padding: 8px 10px;
+    outline: none;
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid #0097e6 ;
+    transition: 1s;
+}
+.chat form input:focus {
+    transition: 1s;
+    border-bottom: 2px solid #0097e6 ;
+}
+.chat form button {
+    border: none;
+    border-color: transparent;
+    background-color: white;
 }
