--- a/web-intensive/lesson1/styleChat.css
+++ b/web-intensive/lesson1/styleChat.css
@@ -38,7 +38,7 @@ background-color: white;
 .column1 {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 }
 .column2 .list-group {
