--- a/web-intensive/lesson1/styleChat.css
+++ b/web-intensive/lesson1/styleChat.css
@@ -9,7 +9,7 @@ background-color: white;
 .container{
     justify-content:space-between;
     display: flex;
-    background-color: white;
+    background-color: whitesmoke;
 }
 .column1{
     align-items: flex-start;
@@ -26,6 +26,7 @@ background-color: white;
     height: 662px;
     padding: 10px 25px;
     box-shadow: 0 0 10px rgba(0,0,0,0.25);
+    padding: 0px 0px 8px;
 }
 .navbar2{
     width: 100%;
@@ -44,12 +45,12 @@ background-color: white;
 .column2 .list-group {
     height: 80.5%;
     overflow: auto;
-    color: whitesmoke;
+    color: white;
 }
 .title{
     height: 100px;
     border-bottom: 1px solid rgba(0,0,0,0.25);
-    margin-bottom:30px;
+    margin-bottom: 30px;
 }
 .title h2{
     line-height:100px;
@@ -89,6 +90,7 @@ background-color: white;
     width: 100%;
     display: flex;
     align-items: center;
+    background-color: white;
 }
 .chat form input {
     width: 90%;
