--- a/web-intensive/lesson1/styleChat.css
+++ b/web-intensive/lesson1/styleChat.css
@@ -4,109 +4,218 @@
     box-sizing: border-box;
 }
 body{
-background-color: white;
+    background-color:whitesmoke
 }
 .container{
-    justify-content:space-between;
     display: flex;
-    background-color: whitesmoke;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
 }
-.column1{
-    align-items: flex-start;
-    width: 15%;
-    height: 663px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.25);
+.form_signUp_wrapper{
+    background-color:white;
+    width: 65%;
+    height:600px;
+    border-radius:25px;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.25);
 }
-.column2{
-    width: 35%;
-    height: 663px;
+.form_signUp_input_wrapper input{
+    display: block;
 }
-.column3{
-    width: 50%;
-    height: 662px;
-    padding: 10px 25px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.25);
-    padding: 0px 0px 8px;
+.form_signUp_wrapper .row{
+    height:100%
 }
-.navbar2{
-    width: 100%;
-    height: 80px;
-}
-.chatbox{
-    width: 100%;
-    height: 583px;
-}
-.column1 {
+.form_signUp_wrapper .right, .form_signUp_wrapper .left{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    height:100%
 }
-.column2 .list-group {
-    height: 80.5%;
-    overflow: auto;
-    color: white;
+.form_signUp_wrapper .right h1{
+    margin-bottom: 70px;
+}
+.form_signUp_wrapper .right input:not(.form-check){
+    padding:10px 15px;
+    margin-bottom: 10px;
+    width: 250px;
+}
+.form_signUp_wrapper .right input.form-check{
+    padding: 0 !important;
+}
+.form_signUp_wrapper .right button{
+    padding: 10px 45px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+}
+.form_signUp_wrapper .right button:hover{
+    background-color:whitesmoke;
+}
+.text-error{
+    color:red;
+}
+.info_chat_container{
+    height:100vh;
+    width: 15%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.125);
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    align-items:center;
+}
+.users_chat_container{
+    height:100vh;
+
+    width: 40%;
+    padding: 10px 15px;
 }
 .title{
     height: 100px;
     border-bottom: 1px solid rgba(0,0,0,0.25);
-    margin-bottom: 30px;
+    margin-bottom:30px;
+}
+.dark .title {
+    color: gray;
 }
 .title h2{
     line-height:100px;
     align-items:center;
 }
-.chat-content-container {
-    width: 100%;
+.body_chat_container{
+    height:100vh;
+    width: 65%;
+    padding: 10px 25px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.125);
+}
+.list-group-item{
+    display: flex;
+    justify-content: space-between;
+}
+.dark .list-group-item {
+    background-color: #292C35;
+    color: lightgray;
+    transition: background 0.2s linear;
+}
+.list-group-item .time{
+    display: flex;
+    align-items: center;
+}
+.users_chat_container .list-group{
+    height: 85%;
+    overflow: auto;
+    
+}
+.chat-content-container{
     display: flex;
     flex-direction: column;
     height: 90%;
     overflow: auto;
+
 }
-.chat-content {
-    background-color: gray;
-    margin-bottom: 10px;
+.chat-content{
+    background-color:gray;
+    margin-bottom:10px;
     max-width: 70%;
     padding: 5px 10px;
     border-radius: 10px;
     color: white;
+    align-self: flex-start;
 }
 .chat-content span{
     word-break: break-word;
 }
-.chat-content-container .owner {
-    background-color: #0097e6;
-    float: right;
-    align-self: flex-end !important;
+.chat-content-container .owner{
+    background-color: #3498db;
+    align-self: flex-end;
+ 
 }
-.chat {
-    height: 90%;
-    width: 100%;
+.chat{
+    height:85%;
+    width:100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.chat form {
+.chat form{
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: white;
 }
-.chat form input {
-    width: 90%;
+.chat form input{
+    width: 95%;
     padding: 8px 10px;
     outline: none;
     border: none;
     background: transparent;
-    border-bottom: 1px solid #0097e6 ;
-    transition: 1s;
+    border-bottom: 1px solid #3498db;
+    transition:1s;
+
 }
-.chat form input:focus {
-    transition: 1s;
-    border-bottom: 2px solid #0097e6 ;
+.chat form input:focus{
+    transition:1s;
+    border-bottom: 2px solid #3498db;
 }
-.chat form button {
+.chat form button{
     border: none;
-    border-color: transparent;
-    background-color: white;
+    border-radius:50%
+}
+
+/* dark and light */
+body {
+	background-color: #fafafa;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	margin: 0;
+	transition: background 0.2s linear;
+}
+
+body.dark {
+	background: #292C35;
+}
+
+.checkbox {
+	opacity: 0;
+	position: absolute;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5);
+}
+
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
+}
+
+
+.fa-moon {
+	color: #f1c40f;
+}
+
+.fa-sun {
+	color: #f39c12;
 }
