--- a/web-intensive/lesson1/chat.css
+++ b/web-intensive/lesson1/chat.css
@@ -101,14 +101,14 @@ body{
 
 
 .users_chat_container .list-group{
-    height: 85%;
+    height: 80%;
     overflow: auto;
     
 }
 .chat-content-container{
     display: flex;
     flex-direction: column;
-    height: 90%;
+    height: 80%;
     overflow: auto;
 
 }
@@ -130,7 +130,7 @@ body{
  
 }
 .chat{
-    height:85%;
+    height:75%;
     width:100%;
     display: flex;
     flex-direction: column;
@@ -224,4 +224,10 @@ body.dark {
 
 .fa-sun {
 	color: #f39c12;
+}
+#currentEmail{
+    margin: 0px !important;
+}
+#currentID{
+    margin: 0px !important;
 }
